tests/compile-fail/span-tracked-getter.stderr
error[E0308]: mismatched types
  --> tests/compile-fail/span-tracked-getter.rs:24:13
   |
24 |     x.field(22);
   |       ----- ^^ expected `&dyn Db`, found integer
   |       |
   |       arguments to this method are incorrect
   |
   = note: expected reference `&(dyn Db + 'static)`
                   found type `{integer}`
note: method defined here
  --> tests/compile-fail/span-tracked-getter.rs:18:5
   |
16 | #[salsa::tracked]
   | -----------------
17 | pub struct MyTracked<'db> {
18 |     field: u32,
   |     ^^^^^
